--- a/.github/workflows/mz-workload-tests-runner.yml
+++ b/.github/workflows/mz-workload-tests-runner.yml
@@ -98,7 +98,7 @@ env:
   IS_LKG_DROP: ${{ inputs.is_lkg_drop || false }}
   RUNNER: ${{ inputs.runner_label || 'flex-gpu' }}
   FRAMEWORK_VERSION: ${{ inputs.framework_version || '2.14.0' }}
-  FRAMEWORK_EXTENSION_VERSION : ${{ inputs.framework_extension_version || '2.14.0.1' }}
+  FRAMEWORK_EXTENSION_VERSION: ${{ inputs.framework_extension_version || '2.14.0.1' }}
   TORCHVISION_VERSION: ${{ inputs.torchvision_version || '0.16.2' }}
   AIKIT_VERSION: ${{ inputs.aikit_release || '2024.0.0' }}
   PHASE: ${{ inputs.phase || 'inference' }}
@@ -117,14 +117,16 @@ jobs:
       id: recipes
       run: |
         if [[ ("${{ inputs.framework }}" != "") && ("${{ inputs.workload }}" != "") ]]; then
-          echo "RECIPES=$(find models_v2/${{ inputs.framework }}/${{ inputs.workload }}/${{ inputs.phase }}/${{ inputs.device}} -type f -name 'tests.yaml' -exec dirname {} \; | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
+          echo "RECIPES=$(find models_v2/${{ inputs.framework }}/${{ inputs.workload }}/${{ inputs.phase }}/${{ inputs.device}} \
+           -type f -name 'tests.yaml' -exec dirname {} \; | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
         elif [[ ("${{ inputs.framework }}" != "") && ("${{ inputs.workload }}" == "") ]]; then
-          echo "RECIPES=$(find models_v2/${{ inputs.framework }}/${{ inputs.workload }}/${{ inputs.phase }}/${{ inputs.device}} -type f -name 'tests.yaml' -exec dirname {} \; | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
+          echo "RECIPES=$(find models_v2/${{ inputs.framework }}/${{ inputs.workload }}/${{ inputs.phase }}/${{ inputs.device}} \
+           -type f -name 'tests.yaml' -exec dirname {} \; | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
         else
           echo "RECIPES=$(find models_v2/ -type f -name 'tests.yaml' -exec dirname {} \; | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
         fi
   test-workloads:
-    needs: [ setup-test ]
+    needs: [setup-test]
     runs-on: [self-hosted, Linux, "${{ inputs.runner_label }}"]
     container:
       image: amr-registry.caas.intel.com/aiops/imz-dev-ci:py3.9
@@ -159,14 +161,16 @@ jobs:
       shell: bash
       run: |
         if [[ "${{ inputs.framework }}" == "tensorflow" ]]; then
-          if [[ "${{ inputs.runner_label }}" == "flex-gpu" ]] || [[ "${{ inputs.runner_label }}" == "max-gpu" ]] || [[ "${{ inputs.runner_label }}" == "ATS-M" ]] || [[ "${{ inputs.runner_label }}" == "pvc" ]]; then
-            echo "FOLDER=ITEX-XPU" >> "$GITHUB_ENV"
+          if [[ "${{ inputs.runner_label }}" == "flex-gpu" ]] || [[ "${{ inputs.runner_label }}" == "max-gpu" ]] || \
+            [[ "${{ inputs.runner_label }}" == "ATS-M" ]] || [[ "${{ inputs.runner_label }}" == "pvc" ]]; then
+              echo "FOLDER=ITEX-XPU" >> "$GITHUB_ENV"
           else
             echo "FOLDER=TensorFlow" >> "$GITHUB_ENV"
           fi
         elif [[ "${{ inputs.framework }}" == "pytorch" ]]; then
-          if [[ "${{ inputs.runner_label }}" == "flex-gpu" ]] || [[ "${{ inputs.runner_label }}" == "max-gpu" ]] || [[ "${{ inputs.runner_label }}" == "ATS-M" ]] || [[ "${{ inputs.runner_label }}" == "pvc" ]]; then
-            echo "FOLDER=IPEX-XPU" >> "$GITHUB_ENV"
+          if [[ "${{ inputs.runner_label }}" == "flex-gpu" ]] || [[ "${{ inputs.runner_label }}" == "max-gpu" ]] || \
+            [[ "${{ inputs.runner_label }}" == "ATS-M" ]] || [[ "${{ inputs.runner_label }}" == "pvc" ]]; then
+              echo "FOLDER=IPEX-XPU" >> "$GITHUB_ENV"
           else
             echo "FOLDER=PyTorch" >> "$GITHUB_ENV"
           fi
@@ -190,7 +194,7 @@ jobs:
         workload: ${{ inputs.workload }}
         framework: ${{ inputs.framework }}
         token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Checkout Model Zoo Repo 
+    - name: Checkout Model Zoo Repo
       uses: actions/checkout@v4
       with:
         path: 'Model-Zoo-dGPU'
