Fixing lint and unittests (#2241)
Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>
Co-authored-by: mahathis <36486206+Mahathi-Vatsal@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 conditional
 flake8==3.7.5
 mock
+pytest==6.0.2; python_version<'3.10'
+pytest>=6.2.5; python_version>='3.10'
 pytest-cov
 pytest-xdist
-pytest<=6.0.2
-tox
+tox==3.28.0
+virtualenv
