--- a/docker/pyt-cpu/docker-compose.yml
+++ b/docker/pyt-cpu/docker-compose.yml
@@ -18,7 +18,7 @@
 version: '3'
 services:
   bert-large-inference:
-    image: ${BASE_IMAGE:-intel/intel-optimized-pytorch}-ci:b-${GITHUB_RUN_NUMBER:-0}-${OS:-ubuntu}-pyt-language-modeling-bert-large-inference
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-language-modeling-bert-large-inference
     pull_policy: always
     build:
       context: ../../
@@ -26,13 +26,13 @@ services:
         http_proxy: ${http_proxy}
         https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
-        BASE_IMAGE: ${BASE_IMAGE:-intel/intel-optimized-pytorch}
-        BASE_TAG: ${BASE_TAG:-2.1-pip-base}
-      dockerfile: docker/pyt-cpu/bert-large-inference/pytorch-bert-large-inference.Dockerfile-${OS:-ubuntu}
+        BASE_IMAGE: ${REGISTRY}/aiops/mlops
+        BASE_TAG: emr-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.1-py310
+      dockerfile: docker/pyt-cpu/bert-large-inference/pytorch-bert-large-inference.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
   maskrcnn-inference:
-    image: ${BASE_IMAGE:-intel/intel-optimized-pytorch}-ci:b-${GITHUB_RUN_NUMBER:-0}-${OS:-ubuntu}-pyt-object-detection-maskrcnn-inference
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-object-detection-maskrcnn-inference
     pull_policy: always
     build:
       context: ../../
@@ -40,13 +40,13 @@ services:
         http_proxy: ${http_proxy}
         https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
-        BASE_IMAGE: ${BASE_IMAGE:-intel/intel-optimized-pytorch}
-        BASE_TAG: ${BASE_TAG:-2.1-pip-base}
-      dockerfile: docker/pyt-cpu/maskrcnn-inference/pytorch-maskrcnn-inference.Dockerfile-${OS:-ubuntu}
+        BASE_IMAGE: ${REGISTRY}/aiops/mlops
+        BASE_TAG: emr-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.1-py310
+      dockerfile: docker/pyt-cpu/maskrcnn-inference/pytorch-maskrcnn-inference.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
   maskrcnn-training:
-    image: ${BASE_IMAGE:-intel/intel-optimized-pytorch}-ci:b-${GITHUB_RUN_NUMBER:-0}-${OS:-ubuntu}-pyt-object-detection-maskrcnn-training
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-object-detection-maskrcnn-training
     pull_policy: always
     build:
       context: ../../
@@ -54,13 +54,13 @@ services:
         http_proxy: ${http_proxy}
         https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
-        BASE_IMAGE: ${BASE_IMAGE:-intel/intel-optimized-pytorch}
-        BASE_TAG: ${BASE_TAG:-2.1-pip-base}
-      dockerfile: docker/pyt-cpu/maskrcnn-training/pytorch-maskrcnn-training.Dockerfile-${OS:-ubuntu}
+        BASE_IMAGE: ${REGISTRY}/aiops/mlops
+        BASE_TAG: emr-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.1-py310
+      dockerfile: docker/pyt-cpu/maskrcnn-training/pytorch-maskrcnn-training.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
   resnet50-training:
-    image: ${BASE_IMAGE:-intel/intel-optimized-pytorch}-ci:b-${GITHUB_RUN_NUMBER:-0}-${OS:-ubuntu}-pyt-pytorch-image-recognition-resnet50-training
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pytorch-image-recognition-resnet50-training
     pull_policy: always
     build:
       context: ../../
@@ -68,13 +68,13 @@ services:
         http_proxy: ${http_proxy}
         https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
-        BASE_IMAGE: ${BASE_IMAGE:-intel/intel-optimized-pytorch}
-        BASE_TAG: ${BASE_TAG:-2.1-pip-base}
-      dockerfile: docker/pyt-cpu/resnet50-training/pytorch-resnet50-training.Dockerfile-${OS:-ubuntu}
+        BASE_IMAGE: ${REGISTRY}/aiops/mlops
+        BASE_TAG: emr-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.1-py310
+      dockerfile: docker/pyt-cpu/resnet50-training/pytorch-resnet50-training.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
   resnet50-inference:
-    image: ${BASE_IMAGE:-intel/intel-optimized-pytorch}-ci:b-${GITHUB_RUN_NUMBER:-0}-${OS:-ubuntu}-pyt-pytorch-image-recognition-resnet50-inference
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pytorch-image-recognition-resnet50-inference
     pull_policy: always
     build:
       context: ../../
@@ -82,13 +82,13 @@ services:
         http_proxy: ${http_proxy}
         https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
-        BASE_IMAGE: ${BASE_IMAGE:-intel/intel-optimized-pytorch}
-        BASE_TAG: ${BASE_TAG:-2.1-pip-base}
-      dockerfile: docker/pyt-cpu/resnet50-inference/pytorch-resnet50-inference.Dockerfile-${OS:-ubuntu}
+        BASE_IMAGE: ${REGISTRY}/aiops/mlops
+        BASE_TAG: emr-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.1-py310
+      dockerfile: docker/pyt-cpu/resnet50-inference/pytorch-resnet50-inference.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
   ssd-resnet34-inference:
-    image: ${BASE_IMAGE:-intel/intel-optimized-pytorch}-ci:b-${GITHUB_RUN_NUMBER:-0}-${OS:-ubuntu}-pyt-object-detection-ssd-resnet34-inference
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-object-detection-ssd-resnet34-inference
     pull_policy: always
     build:
       context: ../../
@@ -96,13 +96,13 @@ services:
         http_proxy: ${http_proxy}
         https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
-        BASE_IMAGE: ${BASE_IMAGE:-intel/intel-optimized-pytorch}
-        BASE_TAG: ${BASE_TAG:-2.1-pip-base}
-      dockerfile: docker/pyt-cpu/ssd-resnet34-inference/pytorch-ssd-resnet34-inference.Dockerfile-${OS:-ubuntu}
+        BASE_IMAGE: ${REGISTRY}/aiops/mlops
+        BASE_TAG: emr-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.1-py310
+      dockerfile: docker/pyt-cpu/ssd-resnet34-inference/pytorch-ssd-resnet34-inference.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
   ssd-resnet34-training:
-    image: ${BASE_IMAGE:-intel/intel-optimized-pytorch}-ci:b-${GITHUB_RUN_NUMBER:-0}-${OS:-ubuntu}-pyt-object-detection-ssd-resnet34-training
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-object-detection-ssd-resnet34-training
     pull_policy: always
     build:
       context: ../../
@@ -110,13 +110,12 @@ services:
         http_proxy: ${http_proxy}
         https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
-        BASE_IMAGE: ${BASE_IMAGE:-intel/intel-optimized-pytorch}
-        BASE_TAG: ${BASE_TAG:-2.1-pip-base}
-      dockerfile: docker/pyt-cpu/ssd-resnet34-training/pytorch-ssd-resnet34-training.Dockerfile-${OS:-ubuntu}
+        BASE_IMAGE: ${REGISTRY}/aiops/mlops
+        BASE_TAG: emr-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.1-py310
+      dockerfile: docker/pyt-cpu/ssd-resnet34-training/pytorch-ssd-resnet34-training.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
   resnext-32x16d-inference:
-    image: ${BASE_IMAGE:-intel/intel-optimized-pytorch}-ci:b-${GITHUB_RUN_NUMBER:-0}-${OS:-ubuntu}-pyt-resnext-32x16d-inference
     pull_policy: always
     build:
       context: ../../
@@ -124,13 +123,13 @@ services:
         http_proxy: ${http_proxy}
         https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
-        BASE_IMAGE: ${BASE_IMAGE:-intel/intel-optimized-pytorch}
-        BASE_TAG: ${BASE_TAG:-2.1-pip-base}
-      dockerfile: docker/pyt-cpu/resnext-32x16d-inference/pytorch-resnext-32x16d-inference.Dockerfile-${OS:-ubuntu}
+        BASE_IMAGE: ${REGISTRY}/aiops/mlops
+        BASE_TAG: emr-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.1-py310
+      dockerfile: docker/pyt-cpu/resnext-32x16d-inference/pytorch-resnext-32x16d-inference.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
   dlrm-inference:
-    image: ${BASE_IMAGE:-intel/intel-optimized-pytorch}-ci:b-${GITHUB_RUN_NUMBER:-0}-${OS:-ubuntu}-pyt-recommendation-dlrm-inference
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-recommendation-dlrm-inference
     pull_policy: always
     build:
       context: ../../
@@ -138,13 +137,13 @@ services:
         http_proxy: ${http_proxy}
         https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
-        BASE_IMAGE: ${BASE_IMAGE:-intel/intel-optimized-pytorch}
-        BASE_TAG: ${BASE_TAG:-2.1-pip-base}
-      dockerfile: docker/pyt-cpu/dlrm-inference/pytorch-dlrm-inference.Dockerfile-${OS:-ubuntu}
+        BASE_IMAGE: ${REGISTRY}/aiops/mlops
+        BASE_TAG: emr-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.1-py310
+      dockerfile: docker/pyt-cpu/dlrm-inference/pytorch-dlrm-inference.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
   dlrm-training:
-    image: ${BASE_IMAGE:-intel/intel-optimized-pytorch}-ci:b-${GITHUB_RUN_NUMBER:-0}-${OS:-ubuntu}-pyt-recommendation-dlrm-training
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-recommendation-dlrm-training-${BASE_IMAGE_NAME:-ubuntu}
     pull_policy: always
     build:
       context: ../../
@@ -152,13 +151,13 @@ services:
         http_proxy: ${http_proxy}
         https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
-        BASE_IMAGE: ${BASE_IMAGE:-intel/intel-optimized-pytorch}
-        BASE_TAG: ${BASE_TAG:-2.1-pip-base}
-      dockerfile: docker/pyt-cpu/dlrm-training/pytorch-dlrm-training.Dockerfile-${OS:-ubuntu}
+        BASE_IMAGE: ${REGISTRY}/aiops/mlops
+        BASE_TAG: emr-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.1-py310
+      dockerfile: docker/pyt-cpu/dlrm-training/pytorch-dlrm-training.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
   rnnt-training:
-    image: ${BASE_IMAGE:-intel/intel-optimized-pytorch}-ci:b-${GITHUB_RUN_NUMBER:-0}-${OS:-ubuntu}-pyt-language-modeling-rnnt-training
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-language-modeling-rnnt-training
     pull_policy: always
     build:
       context: ../../
@@ -166,13 +165,13 @@ services:
         http_proxy: ${http_proxy}
         https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
-        BASE_IMAGE: ${BASE_IMAGE:-intel/intel-optimized-pytorch}
-        BASE_TAG: ${BASE_TAG:-2.1-pip-base}
-      dockerfile: docker/pyt-cpu/rnnt-training/pytorch-rnnt-training.Dockerfile-${OS:-ubuntu}
+        BASE_IMAGE: ${REGISTRY}/aiops/mlops
+        BASE_TAG: emr-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.1-py310
+      dockerfile: docker/pyt-cpu/rnnt-training/pytorch-rnnt-training.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
   rnnt-inference:
-    image: ${BASE_IMAGE:-intel/intel-optimized-pytorch}-ci:b-${GITHUB_RUN_NUMBER:-0}-${OS:-ubuntu}-pyt-language-modeling-rnnt-inference
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-language-modeling-rnnt-inference
     pull_policy: always
     build:
       context: ../../
@@ -180,13 +179,13 @@ services:
         http_proxy: ${http_proxy}
         https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
-        BASE_IMAGE: ${BASE_IMAGE:-intel/intel-optimized-pytorch}
-        BASE_TAG: ${BASE_TAG:-2.1-pip-base}
-      dockerfile: docker/pyt-cpu/rnnt-inference/pytorch-rnnt-inference.Dockerfile-${OS:-ubuntu}
+        BASE_IMAGE: ${REGISTRY}/aiops/mlops
+        BASE_TAG: emr-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.1-py310
+      dockerfile: docker/pyt-cpu/rnnt-inference/pytorch-rnnt-inference.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
   distilbert-inference:
-    image: ${BASE_IMAGE:-intel/intel-optimized-pytorch}-ci:b-${GITHUB_RUN_NUMBER:-0}-${OS:-ubuntu}-pyt-language-modeling-distilbert-inference
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-language-modeling-distilbert-inference
     pull_policy: always
     build:
       context: ../../
@@ -194,13 +193,13 @@ services:
         http_proxy: ${http_proxy}
         https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
-        BASE_IMAGE: ${BASE_IMAGE:-intel/intel-optimized-pytorch}
-        BASE_TAG: ${BASE_TAG:-2.1-pip-base}
-      dockerfile: docker/pyt-cpu/distilbert-inference/pytorch-distilbert-inference.Dockerfile-${OS:-ubuntu}
+        BASE_IMAGE: ${REGISTRY}/aiops/mlops
+        BASE_TAG: emr-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.1-py310
+      dockerfile: docker/pyt-cpu/distilbert-inference/pytorch-distilbert-inference.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
   bert-large-training:
-    image: ${BASE_IMAGE:-intel/intel-optimized-pytorch}-ci:b-${GITHUB_RUN_NUMBER:-0}-${OS:-ubuntu}-pyt-language-modeling-bert-large-training
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-language-modeling-bert-large-training
     pull_policy: always
     build:
       context: ../../
@@ -208,9 +207,9 @@ services:
         http_proxy: ${http_proxy}
         https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
-        BASE_IMAGE: ${BASE_IMAGE:-intel/intel-optimized-pytorch}
-        BASE_TAG: ${BASE_TAG:-2.1-pip-base}
-      dockerfile: docker/pyt-cpu/bert-large-training/pytorch-bert-large-training.Dockerfile-${OS:-ubuntu}
+        BASE_IMAGE: ${REGISTRY}/aiops/mlops
+        BASE_TAG: emr-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.1-py310
+      dockerfile: docker/pyt-cpu/bert-large-training/pytorch-bert-large-training.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
   llama-inference:
@@ -246,14 +245,14 @@ services:
     extends: bert-large-training
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
-  yolov7-inference:
-    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-object-detection-yolov7-inference
-    pull_policy: always
-    build:
-      context: ../../
-      args:
-        BASE_TAG: srf-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.3-py310
-      dockerfile: docker/pyt-cpu/yolov7-inference/pytorch-yolov7-inference.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
-    extends: bert-large-training
-    command: >
-      bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
+  # yolov7-inference:
+  #   image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-object-detection-yolov7-inference
+  #   pull_policy: always
+  #   build:
+  #     context: ../../
+  #     args:
+  #       BASE_TAG: srf-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.3-py310
+  #     dockerfile: docker/pyt-cpu/yolov7-inference/pytorch-yolov7-inference.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
+  #   extends: bert-large-training
+  #   command: >
+  #     bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
