--- a/models_v2/tensorflow/resnet50v1_5/training/gpu/tests.yaml
+++ b/models_v2/tensorflow/resnet50v1_5/training/gpu/tests.yaml
@@ -1,32 +1,36 @@
 inference-bf16:
   cmd:
     bash $GITHUB_WORKSPACE/tests/cicd/ITEX-XPU/setup.sh ${FRAMEWORK_VERSION} ${FRAMEWORK_EXTENSION_VERSION} ${IS_LKG_DROP} ${AIKIT_VERSION};
-    bash $GITHUB_WORKSPACE/tests/cicd/ITEX-XPU/resnet50v1_5-training/run_test.sh ${CONFIG_FILE} ${IS_LKG_DROP} ${DATASET_DIR} ${MULTI_TILE}
+    bash $GITHUB_WORKSPACE/tests/cicd/ITEX-XPU/resnet50v1_5-training/run_test.sh ${CONFIG_FILE} ${IS_LKG_DROP} ${DATASET_DIR} ${MULTI_TILE} ${NUM_DEVICES}
   env:
     MULTI_TILE: "False"
     CONFIG_FILE: "configure/itex_bf16.yaml"
     DATASET_DIR: "/tf_dataset/dataset/TF_Imagenet_FullData/"
+    NUM_DEVICES: 1
 inference-fp32:
   cmd:
     bash $GITHUB_WORKSPACE/tests/cicd/ITEX-XPU/setup.sh ${FRAMEWORK_VERSION} ${FRAMEWORK_EXTENSION_VERSION} ${IS_LKG_DROP} ${AIKIT_VERSION};
-    bash $GITHUB_WORKSPACE/tests/cicd/ITEX-XPU/resnet50v1_5-training/run_test.sh ${CONFIG_FILE} ${IS_LKG_DROP} ${DATASET_DIR} ${MULTI_TILE}
+    bash $GITHUB_WORKSPACE/tests/cicd/ITEX-XPU/resnet50v1_5-training/run_test.sh ${CONFIG_FILE} ${IS_LKG_DROP} ${DATASET_DIR} ${MULTI_TILE} ${NUM_DEVICES}
   env:
     MULTI_TILE: "False"
     CONFIG_FILE: "configure/itex_fp32.yaml"
     DATASET_DIR: "/tf_dataset/dataset/TF_Imagenet_FullData/"
+    NUM_DEVICES: 1
 inference-bf16-multi:
   cmd:
     bash $GITHUB_WORKSPACE/tests/cicd/ITEX-XPU/setup.sh ${FRAMEWORK_VERSION} ${FRAMEWORK_EXTENSION_VERSION} ${IS_LKG_DROP} ${AIKIT_VERSION};
-    bash $GITHUB_WORKSPACE/tests/cicd/ITEX-XPU/resnet50v1_5-training/run_test.sh ${CONFIG_FILE} ${IS_LKG_DROP} ${DATASET_DIR} ${MULTI_TILE}
+    bash $GITHUB_WORKSPACE/tests/cicd/ITEX-XPU/resnet50v1_5-training/run_test.sh ${CONFIG_FILE} ${IS_LKG_DROP} ${DATASET_DIR} ${MULTI_TILE} ${NUM_DEVICES}
   env:
-    MULTI_TILE: "True"
+    MULTI_TILE: "False"
     CONFIG_FILE: "hvd_configure/itex_bf16_lars.yaml"
     DATASET_DIR: "/tf_dataset/dataset/TF_Imagenet_FullData/"
+    NUM_DEVICES: 2
 inference-fp32-multi:
   cmd:
     bash $GITHUB_WORKSPACE/tests/cicd/ITEX-XPU/setup.sh ${FRAMEWORK_VERSION} ${FRAMEWORK_EXTENSION_VERSION} ${IS_LKG_DROP} ${AIKIT_VERSION};
-    bash $GITHUB_WORKSPACE/tests/cicd/ITEX-XPU/resnet50v1_5-training/run_test.sh ${CONFIG_FILE} ${IS_LKG_DROP} ${DATASET_DIR} ${MULTI_TILE}
+    bash $GITHUB_WORKSPACE/tests/cicd/ITEX-XPU/resnet50v1_5-training/run_test.sh ${CONFIG_FILE} ${IS_LKG_DROP} ${DATASET_DIR} ${MULTI_TILE} ${NUM_DEVICES}
   env:
-    MULTI_TILE: "True"
+    MULTI_TILE: "False"
     CONFIG_FILE: "hvd_configure/itex_fp32_lars.yaml"
     DATASET_DIR: "/tf_dataset/dataset/TF_Imagenet_FullData/"
+    NUM_DEVICES: 2
