Update IPEX RN50v1.5 training examples to support multi-gpu (#2263)
* Add NUM_DEVICES to suuport multi-gpu training

Signed-off-by: Wang, Kai Lawrence <kai.lawrence.wang@intel.com>

--- a/docker/max-gpu/pytorch-resnet50v1-5-training/tests.yaml
+++ b/docker/max-gpu/pytorch-resnet50v1-5-training/tests.yaml
@@ -11,6 +11,7 @@ bf16-training:
     DATASET_DIR: /nfs/pdx/disks/mlp_pytorch_dataset/Imagenet_FullData
     MULTI_TILE: 'True'
     PLATFORM: 'Max'
+    NUM_DEVICES: 2
   volumes:
     - src: /tmp
       dst: /tmp
@@ -31,6 +32,7 @@ fp32-training:
     DATASET_DIR: /nfs/pdx/disks/mlp_pytorch_dataset/Imagenet_FullData
     MULTI_TILE: 'True'
     PLATFORM: 'Max'
+    NUM_DEVICES: 2
   volumes:
     - src: /tmp
       dst: /tmp
@@ -51,6 +53,7 @@ tf32-training:
     DATASET_DIR: /nfs/pdx/disks/mlp_pytorch_dataset/Imagenet_FullData
     MULTI_TILE: 'True'
     PLATFORM: 'Max'
+    NUM_DEVICES: 2
   volumes:
     - src: /tmp
       dst: /tmp
