--- a/docker/flex-gpu/pytorch-3dunet-inference/tests.yaml
+++ b/docker/flex-gpu/pytorch-3dunet-inference/tests.yaml
@@ -1,5 +1,4 @@
-#
-# Copyright (c) 2023 Intel Corporation
+# Copyright (c) 2023-2024 Intel Corporation
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,24 +11,15 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
-"""Consts for 3dunet inference."""
 
-ACC = {
-    "type": "total",
-    "pattern": r"Accuracy: mean = (\d.\d+)",
-    "unit": "mean",
-}
-
-PERF = {
-    "type": "total",
-    "pattern": r"3dunet_inf throughput:  (\d+.\d+)  sample/s",
-    "inverse": False,
-    "multiply": False,
-    "use_batch_size": False,
-    "unit": "sample/s",
-}
-
-FUNCTIONAL = {
-    "pattern": r"No warnings encountered during test."
-}
+3dunet-default-settings:
+  img: intel/image-recognition:pytorch-flex-gpu-3dunet-inference
+  cmd: bash run_model.sh
+  ipc: host
+  device: /dev/dri
+  cap_add: SYS_NICE
+  env:
+    OUTPUT_DIR: '/tmp'
+  volumes:
+    - src: /tmp
+      dst: /tmp
