Update requirements.txt (#2298)

--- a/docs/notebooks/transfer_learning/requirements.txt
+++ b/docs/notebooks/transfer_learning/requirements.txt
@@ -21,7 +21,7 @@ pandas~=2.0.1
 pillow>=10.3.0 # upgraded to avoid a vulnerability
 psutil~=5.9.5
 pycocotools~=2.0.6
-scikit-learn~=1.2.2
+scikit-learn>=1.5.0
 scipy~=1.10.1
 sentencepiece~=0.1.99
 tensorflow-addons~=0.20.0
