--- a/.github/config/models_v2-check-config.json
+++ b/.github/config/models_v2-check-config.json
@@ -15,12 +15,14 @@
   "mandatory_files": [
     "README.md",
     "setup.sh",
-    "run_model.sh",
-    "tests.yaml"
+    "run_model.sh"
   ],
   "test_keys": [
     "cmd",
     "env"
+  ],
+  "skip_dir_structure_check": [
+    "pytorch/maskrcnn/common/maskrcnn-benchmark"
   ],
   "skip_files_check": [
     "jax/gemma/inference/cpu",
@@ -44,7 +46,21 @@
     "pytorch/swin-transformer/inference/gpu",
     "pytorch/torchrec_dlrm/inference/gpu",
     "pytorch/torchrec_dlrm/training/gpu",
-    "pytorch/unetpp/inference/gpu"
+    "pytorch/unetpp/inference/gpu",
+    "pytorch/maskrcnn/training/cpu",
+    "pytorch/maskrcnn/inference/cpu",
+    "pytorch/maskrcnn/common/maskrcnn-benchmark",
+    "tensorflow/3d_unet/training/gpu",
+    "tensorflow/stable_diffusion/inference/gpu",
+    "tensorflow/maskrcnn/training/gpu",
+    "tensorflow/maskrcnn/inference/gpu",
+    "tensorflow/resnet50v1_5/training/gpu",
+    "tensorflow/resnet50v1_5/inference/gpu",
+    "tensorflow/wide_deep_large_ds/inference/gpu",
+    "tensorflow/bert_large/training/gpu",
+    "tensorflow/efficientnet/inference/gpu",
+    "pytorch/ssd-resnet34/training/cpu",
+    "pytorch/ssd-resnet34/inference/cpu"
   ],
   "skip_test_structure_check": [
     "jax/gemma/inference/cpu",
@@ -52,6 +68,8 @@
     "pytorch/3d_unet/inference/gpu",
     "pytorch/bert_large/inference/gpu",
     "pytorch/bert_large/training/gpu",
+    "pytorch/bert_large/inference/cpu",
+    "pytorch/bert_large/training/cpu",
     "pytorch/distilbert/inference/gpu",
     "pytorch/dlrm/inference/gpu",
     "pytorch/fastpitch/inference/gpu",
@@ -66,6 +84,20 @@
     "pytorch/swin-transformer/inference/gpu",
     "pytorch/torchrec_dlrm/inference/gpu",
     "pytorch/torchrec_dlrm/training/gpu",
-    "pytorch/unetpp/inference/gpu"
+    "pytorch/unetpp/inference/gpu",
+    "pytorch/maskrcnn/training/cpu",
+    "pytorch/maskrcnn/inference/cpu",
+    "pytorch/maskrcnn/common/maskrcnn-benchmark",
+    "tensorflow/3d_unet/training/gpu",
+    "tensorflow/stable_diffusion/inference/gpu",
+    "tensorflow/maskrcnn/training/gpu",
+    "tensorflow/maskrcnn/inference/gpu",
+    "tensorflow/resnet50v1_5/training/gpu",
+    "tensorflow/resnet50v1_5/inference/gpu",
+    "tensorflow/wide_deep_large_ds/inference/gpu",
+    "tensorflow/bert_large/training/gpu",
+    "tensorflow/efficientnet/inference/gpu",
+    "pytorch/ssd-resnet34/training/cpu",
+    "pytorch/ssd-resnet34/inference/cpu"
   ]
 }
