--- a/.github/workflows/mz-workload-tests-runner.yml
+++ b/.github/workflows/mz-workload-tests-runner.yml
@@ -119,13 +119,13 @@ jobs:
       id: recipes
       run: |
         if [[ ("${{ inputs.framework }}" != "") && ("${{ inputs.workload }}" != "") ]]; then
-          echo "RECIPES=$(find models_v2/${{ inputs.framework }}/${{ inputs.workload }}/${{ inputs.phase }}/${{ inputs.device}} \
+          echo "RECIPES=$(find tests/cicd/${{ inputs.framework }}/${{ inputs.workload }}/${{ inputs.phase }}/${{ inputs.device}} \
            -type f -name 'tests.yaml' -exec dirname {} \; | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
         elif [[ ("${{ inputs.framework }}" != "") && ("${{ inputs.workload }}" == "") ]]; then
-          echo "RECIPES=$(find models_v2/${{ inputs.framework }}/${{ inputs.workload }}/${{ inputs.phase }}/${{ inputs.device}} \
+          echo "RECIPES=$(find tests/cicd/${{ inputs.framework }}/${{ inputs.workload }}/${{ inputs.phase }}/${{ inputs.device}} \
            -type f -name 'tests.yaml' -exec dirname {} \; | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
         else
-          echo "RECIPES=$(find models_v2/ -type f -name 'tests.yaml' -exec dirname {} \; | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
+          echo "RECIPES=$(find tests/cicd/ -type f -name 'tests.yaml' -exec dirname {} \; | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
         fi
   test-workloads:
     needs: [setup-test]
@@ -163,18 +163,12 @@ jobs:
       shell: bash
       run: |
         if [[ "${{ inputs.framework }}" == "tensorflow" ]]; then
-          if [[ "${{ inputs.runner_label }}" == "flex-gpu" ]] || [[ "${{ inputs.runner_label }}" == "max-gpu" ]] || \
-            [[ "${{ inputs.runner_label }}" == "ATS-M" ]] || [[ "${{ inputs.runner_label }}" == "pvc" ]]; then
-              echo "FOLDER=ITEX-XPU" >> "$GITHUB_ENV"
-          else
-            echo "FOLDER=TensorFlow" >> "$GITHUB_ENV"
+          if [[ "${{ inputs.runner_label }}" =~ ^(flex-gpu|max-gpu|ATS-M|pvc|emr|srf_cpu|tf_dataset)$ ]]; then
+            echo "FOLDER=tensorflow" >> "$GITHUB_ENV"
           fi
         elif [[ "${{ inputs.framework }}" == "pytorch" ]]; then
-          if [[ "${{ inputs.runner_label }}" == "flex-gpu" ]] || [[ "${{ inputs.runner_label }}" == "max-gpu" ]] || \
-            [[ "${{ inputs.runner_label }}" == "ATS-M" ]] || [[ "${{ inputs.runner_label }}" == "pvc" ]]; then
-              echo "FOLDER=IPEX-XPU" >> "$GITHUB_ENV"
-          else
-            echo "FOLDER=PyTorch" >> "$GITHUB_ENV"
+          if [[ "${{ inputs.runner_label }}" =~ ^(flex-gpu|max-gpu|ATS-M|pvc|emr|srf_cpu|pytorch)$ ]]; then
+            echo "FOLDER=pytorch" >> "$GITHUB_ENV"
           fi
         fi
     - name: Check runner AVX capability
@@ -192,14 +186,14 @@ jobs:
       if: github.event_name != 'workflow_dispatch' || contains(github.event.workflow, 'cicd-pipeline.yml')
       uses: ./.github/actions/check-performance
       with:
-        output_folder: ${GITHUB_WORKSPACE}/tests/cicd/output
+        output_folder: ${GITHUB_WORKSPACE}/tests/cicd/${{ inputs.framework }}/${{ inputs.workload }}/${{ inputs.phase }}/${{ inputs.device }}/output
         workload: ${{ inputs.workload }}
         framework: ${{ inputs.framework }}
         token: ${{ secrets.GITHUB_TOKEN }}
     - name: Checkout Model Zoo Repo
       uses: actions/checkout@v4
       with:
-        path: 'Model-Zoo'
+        path: 'AIRM'
     - name: Test Container Group
       uses: intel-innersource/frameworks.ai.infrastructure.machine-learning-operations/test-runner@develop
       with:
